--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "load-grunt-tasks": "^0.6.0"
   },
   "peerDependencies": {
-    "angular": "^1.4.0",
-    "angular-material": "^1.0.0"
+    "angular": "*",
+    "angular-material": "*"
   }
 }
